--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-python-telegram-bot>=20.0
-transmission-rpc>=3.2.2
-requests>=2.28.0
-prettytable>=2.5.0
-pytz>=2023.3
-python-dotenv>=1.0.0
-torf>=4.1.3
+python-telegram-bot>=21.11.1
+transmission-rpc>=7.0.11
+requests>=2.32.3
+prettytable>=3.15.1
+pytz>=2025.1
+python-dotenv>=1.0.1
+torf>=4.3.0
+aiohttp>=3.11.13
